--- a/index.html
+++ b/index.html
@@ -1,35 +1,67 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html lang = "en">
   <head>
-    <!-- This is a comment. I can see it in the code, but it will not appear in the browser. -->
-
-    <!-- 
-    The head section contains info for search engines and the browser and is not seen by site visitors.
-    -->
-
-    <meta charset="UTF-8">
-    <title>Exceptional Realty Group - Luxury Homes - About</title>
+    <!-- This is a comment and will not be read -->
+    <!-- The head section contains information for search engines and the browser and is not seen by site visitors. -->
+    <!-- this meta section is good practice. Tells browser to read the code using character set UTF-8-->
+    <meta charset = "UTF-8">
+    <!-- This is important for search engines to find-->
+    <title>Exceptional Realty Group - Luxury Homes - About </title>
   </head>
   <body>
-    <!-- The body is the entire viewable area of the web page. For example we can see text, links, images, and media. -->
+    <!-- The body is the entire viewable area of the web page. For example, we can see text, links, images, and media. -->
+    <header>
 
-    <h1>Exceptional</h1>
-    <h2>Realty Group</h2>
+    <!-- headings go from h1 to h6(smallest). h1 carries weight with search engines-->
+    <h1> Exceptional </h1>
+    <h2> Realty Group </h2>
 
     <!-- links -->
-    <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
+      <nav>
+        <!-- these are all internal so we can specify the actual filename-->
+        <a href="index.html">About</a><a href="new-properties.html">New Properties</a><a href="real-estate-listings.html">Real Estate Listings</a>
+        <a href="market-report.html">Market Report</a><a href="contact.html">Contact</a>
+        <!-- this is external-->
+        <a href="http://hud.gov" target ="_blank">H.U.D</a>
+      </nav>
+    </header>
 
-    <img src="images/intro-pic.jpg" alt="A beautiful living room." title="Welcome to Exceptional Realty Group">
+    <section id="featured property">
+      <!-- image need to get path
+      foldername/ == go inside folder
+      filename == use the file in the current directory we are in
+      ../ == will leave current folder and go up to the parent folder(directory)
+      -->
+      <figure>
+        <img src="images/CoverPhoto.jpg" alt="A beautiful living room." title = "Welcome to Exceptional Realty">
+        <figcaption>123 Fake street, Brooklyn, NY. Photograph by John Smith</figcaption>
+      </figure>
+      <!-- <p> will make it so it gives both strings space or else it will just link them together -->
+      <p>Hello World</p>
+      <p>Hello Moon.</p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <br>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+    </section>
+    <section id="promotional">
+      <!-- Promo Video-->
+      <!--we have to name the source elements so we can support all browsers by providing diff formats-->
+      <!-- if users browser does not support, we will give message AND give a link for them to upgrade
+      The _blank is opening up a new tab-->
+      <figure>
+        <video controls>
+          <source src="videos/real-estate.mp4" type="video/mp4">
+          <source src="videos/real-estate.ogv" type="video/ogg">
+          Your browser does not support HTML5 video.
+          <a href="http://browsehappy.com" target="_blank">Please upgrade your browser.</a>
+        </video>
+        <figcaption>Exceptional Realty Group promotional video. Source: archive.org</figcaption>
+      </figure>
+    </section>
 
-    <!--
-    foldername/ = go inside the folder.
-    filename = use a file in the current folder.
-    ../ = leavethe current folder and go up to parent folder.
-    -->
-
-    <p>Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit. Quae, perferendis nisi nihil debitis aspernatur doloribus quam eveniet quibusdam tempora esse! Repudiandae, assumenda, debitis doloribus ea eius ab at quae totam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, inventore aliquid ipsam debitis nulla vitae omnis nemo quisquam? Obcaecati dolor ipsum distinctio reprehenderit aliquid autem ea vel provident voluptas nisi.</p>
-
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, natus, nobis, tempore recusandae culpa deleniti dignissimos laborum perspiciatis exercitationem obcaecati dolores unde eveniet eius debitis perferendis provident porro. Ipsum, placeat.</p>
-
+    <footer>
+      &copy; 2016 Exceptional Realty. All Rights Reserved.
+    </footer>
   </body>
 </html>
